# libnikola

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  HACKING.md  README.md
cmake/: dev-mode.cmake  docs-ci.cmake  docs.cmake  folders.cmake  install-config.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  project-is-top-level.cmake  spell-targets.cmake  variables.cmake
docs/: Doxyfile.in  conf.py.in
example/: CMakeLists.txt
example/source/: main.cpp
include/: nikola.hpp
include/libnikola/: get_funcs.hpp  ini_funcs.hpp  libnikola.hpp  string_funcs.hpp
include/nikola/: get_funcs.hpp  stb_truetype.h  string_funcs.hpp  tesla.hpp
include/nikola/tesla/: cfg.hpp  elm.hpp  focus_direction.hpp  gfx.hpp  hlp.hpp  impl.hpp  style.hpp
include/nikola/utils/: get_funcs.hpp  ini_funcs.hpp  string_funcs.hpp
source/: get_funcs.cpp  ini_funcs.cpp  libnikola.cpp  nikola.cpp  tesla.cpp
source/tesla/: elm.cpp  gfx.cpp  hlp.cpp  impl.cpp
source/utils/: get_funcs.cpp  ini_funcs.cpp  string_funcs.cpp
